--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ a:hover {text-decoration:underline;}
 <body>
 	<div class="wrapper">
 		<div class="main">
-			<div class="title">欢迎访问9S博客</div>
+			<div class="title">欢迎访问9S博客测试网站</div>
 			<div class="content">
-				<p>网站正在筹备中</p>
-				<p>谢谢</p>
+				<p>此网站运行于免费的github上</p>
+				<p>重点是免费</p>
 			</div>
 			<div class="footer">
 				该网站由 <a target="_blank" href="https://9sb.org/">王忘杰</a> 创建
