--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ a:hover {text-decoration:underline;}
 				<p>重点是免费</p>
 			</div>
 			<div class="footer">
-				<!-- IPv6-test.com button BEGIN -->
-<a href='http://ipv6-test.com/validate.php?url=referer'><img src='http://ipv6-test.com/button-ipv6-small.png' alt='ipv6 ready' title='ipv6 ready' border='0' /></a>
-<!-- IPv6-test.com button END -->
 				该网站由 <a target="_blank" href="https://9sb.org/">王忘杰</a> 创建
+				<p><!-- IPv6-test.com button BEGIN -->
+<a href='http://ipv6-test.com/validate.php?url=referer'><img src='http://ipv6-test.com/button-ipv6-small.png' alt='ipv6 ready' title='ipv6 ready' border='0' /></a>
+<!-- IPv6-test.com button END --></p>
 			</div>
 		</div>
 	</div>
