--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ a:hover {text-decoration:underline;}
 <body>
 	<div class="wrapper">
 		<div class="main">
-			<div class="title">欢迎访问9S博客测试网站</div>
+			<div class="title">欢迎访问9S博客</div>
 			<div class="content">
-				<p>此网站运行于免费的github上</p>
-				<p>重点是免费</p>
+				<p><a target="_blank" href="https://tntsec.direct.quickconnect.to/wordpress/">跳转最新</a></p>
+			
 			</div>
 			<div class="footer">
-				该网站由 <a target="_blank" href="https://9sb.org/">王忘杰</a> 创建
+				该网站由王忘杰创建
 				<p><!-- IPv6-test.com button BEGIN -->
 <a href='http://ipv6-test.com/validate.php?url=referer'><img src='http://ipv6-test.com/button-ipv6-small.png' alt='ipv6 ready' title='ipv6 ready' border='0' /></a>
 <!-- IPv6-test.com button END --></p>
