--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ a:hover {text-decoration:underline;}
 		<div class="main">
 			<div class="title">欢迎访问9S博客</div>
 			<div class="content">
-				<p><a target="_blank" href="https://tntsec.direct.quickconnect.to/wordpress/">跳转最新</a></p>
+				<p><img src ="扫码_搜索联合传播样式-标准色版.png"></p>
+				<p></p>
 			
 			</div>
 			<div class="footer">
