--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ a:hover {text-decoration:underline;}
 		<div class="main">
 			<div class="title">欢迎访问9S博客</div>
 			<div class="content">
-				<p><img src ="扫码_搜索联合传播样式-标准色版.png"></p>
+				<p><img src ="wx.png"></p>
 				<p></p>
 			
 			</div>
