--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ a:hover {text-decoration:underline;}
 		<div class="main">
 			<div class="title">欢迎访问9S博客</div>
 			<div class="content">
+				<p>所有文章已同步微信公众号</p>
 				<p><img src ="wx.png" width="600"></p>
 				<p></p>
 			
