--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a:hover {text-decoration:underline;}
 				<p>所有文章已同步</p>
 				<p><img src ="wx.png" width="600"></p>
 				<p></p>
-				<p><a href='https://www.toutiao.com/c/user/token/MS4wLjABAAAAzoRWg_FZrUQn4X-FGhvmQ2cdzuDk9xg9v-lcpz3dm5w/?'>今日头条：王忘杰</a></p>
+				<p><a href='https://www.toutiao.com/'>今日头条：王忘杰</a></p>
 				<p><a href='https://www.smzdm.com/'>什么值得买：王忘杰</a></p>
 				<p><a href='https://space.bilibili.com/686694'>bilibili：王忘杰</a></p>
 				<p><a href='https://www.jianshu.com/u/7e47995e60f1'>简书：王忘杰</a></p>
