--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ a:hover {text-decoration:underline;}
 			<div class="title">欢迎访问</div>
 			<div class="content">
 				<p>所有文章已同步</p>
-				<p><img src ="wx.png" width="600"></p>
-				<p></p>
+				<p><a href='https://tntsec.cn.quickconnect.cn/ns/sharing/m6ycm'>群晖笔记共享</a></p>
 				<p><a href='https://www.toutiao.com/'>今日头条：王忘杰</a></p>
 				<p><a href='https://www.smzdm.com/'>什么值得买：王忘杰</a></p>
 				<p><a href='https://space.bilibili.com/686694'>bilibili：王忘杰</a></p>
 				<p><a href='https://www.jianshu.com/u/7e47995e60f1'>简书：王忘杰</a></p>
 				<p><a href='https://www.zhihu.com/people/tntsec'>知乎：王忘杰</a></p>
+				<p><img src ="wx.png" width="600"></p>
 			</div>
 			<div class="footer">
 				该网站由王忘杰创建
