--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@ a:hover {text-decoration:underline;}
 		<div class="main">
 			<div class="title">欢迎访问</div>
 			<div class="content">
-				<p>所有文章已同步</p>
-				<p><a href='https://tntsec.cn.quickconnect.cn/ns/sharing/m6ycm'>群晖笔记共享</a></p>
+				<p></p>
+				<p><b><a href='https://tntsec.cn.quickconnect.cn/ns/sharing/m6ycm'>笔记共享</a></b></p>
+<p></p>
 				<p><a href='https://www.toutiao.com/'>今日头条：王忘杰</a></p>
 				<p><a href='https://www.smzdm.com/'>什么值得买：王忘杰</a></p>
 				<p><a href='https://space.bilibili.com/686694'>bilibili：王忘杰</a></p>
