--- a/index.html
+++ b/index.html
@@ -1,78 +1,4 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>9S博客</title>
-<style>
-body {
-	background-color:#fafcfa;
-	padding:0;
-	margin:0;
-	
-	font-size:16px;
-	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Microsoft YaHei", STHeiti;
-}
-.wrapper {
-	margin:0 auto;
-	width:728px;
-	margin-top:100px;
-}
-.main {
-	background-color:#fff;
-	border:1px solid #e9e9e9;
-	border-top: 3px solid #3b9d3b;
-	padding:40px;
-	padding-bottom:25px;
-	box-shadow: 0 10px 6px -6px #bbb;
-	-moz-box-shadow: 0 10px 6px -6px #bbb;
-	-webkit-box-shadow: 0 10px 6px -6px #bbb;
-}
-.title {
-	text-align:center;
-	font-size:26px;
-	color:#2a8c2a;
-}
-.content {
-	border-top:1px solid #ddd;
-	margin-top: 20px;
-	padding: 25px 20px;
-}
-.footer {
-	border-top:1px solid #ddd;
-	padding-top:20px;
-	font-size:14px;
-	font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB";
-	text-align: right;
-	
-}
-a, a:hover, a:active {color:#999; text-decoration:none;}
-a:hover {text-decoration:underline;}
-</style>
-</head>
-
-<body>
-	<div class="wrapper">
-		<div class="main">
-			<div class="title">欢迎访问</div>
-			<div class="content">
-				<p></p>
-				<p><b><a href='https://tntsec.cn.quickconnect.cn/ns/sharing/m6ycm'>笔记共享</a></b></p>
-<p></p>
-				<p><a href='https://www.toutiao.com/'>今日头条：王忘杰</a></p>
-				<p><a href='https://www.smzdm.com/'>什么值得买：王忘杰</a></p>
-				<p><a href='https://space.bilibili.com/686694'>bilibili：王忘杰</a></p>
-				<p><a href='https://www.jianshu.com/u/7e47995e60f1'>简书：王忘杰</a></p>
-				<p><a href='https://www.zhihu.com/people/tntsec'>知乎：王忘杰</a></p>
-				<p><img src ="wx.png" width="600"></p>
-			</div>
-			<div class="footer">
-				该网站由王忘杰创建
-				<p><!-- IPv6-test.com button BEGIN -->
-<a href='http://ipv6-test.com/validate.php?url=referer'><img src='http://ipv6-test.com/button-ipv6-small.png' alt='ipv6 ready' title='ipv6 ready' border='0' /></a>
-<!-- IPv6-test.com button END --></p>
-			</div>
-		</div>
-	</div>
-</body>
+	<meta http-equiv="refresh" content="0;url=https://www.feiniaomy.com">
 </html>
