--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
-	<meta http-equiv="refresh" content="0;url=https://www.feiniaomy.com">
+	<meta http-equiv="refresh" content="0;url=https://tntsec.cn.quickconnect.cn/ns/sharing/m6ycm">
 </html>
