--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <html>
-	<meta http-equiv="refresh" content="0;url=https://blog.9sb.org:8080/">
+跳转国内加速站
+	<meta http-equiv="refresh" content="1;url=https://blog.9sb.org:8080/">
 </html>
