--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
 <html>
-跳转国内加速站
-	<meta http-equiv="refresh" content="1;url=https://blog.9sb.org:8080/">
+跳转国内加速站，首次访问可能失败
+	<meta http-equiv="refresh" content="1;url=https://blog.9sb.org:8080/index.php">
 </html>
