--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-国内加速站，首次访问可能失败，请再次访问
-<a href="https://blog.9sb.org:8080/">https://blog.9sb.org:8080/</a>
+<meta http-equiv="refresh" content="0;url= https://91mua.com/ ">
+ 
 
 </html>
