--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<meta http-equiv="refresh" content="0;url= https://91mua.com/ ">
+<meta http-equiv="refresh" content="0;url= https://90apt.com/ ">
  
 
 </html>
