--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div id="all">
         <div class="wrapper">
             <div class="main">
-				<h1>益凯外网导航页</h1>
+				<h1>IT外网导航页</h1>
 				<div class="content">
 					<div class="content-top">				
 					<h2>外网导航仅提供有限服务</h2>
 							<ul>
 								<li>
-									益凯OA系统登陆
-									<a href="http://ykoa.ecombine.com:8089/wui/index.html" target="_blank"><i>ykoa.ecombine.com</i></a>
+									企业OA系统登陆
+									<a href="http://ykoa.ecombine.com:8089/wui/index.html" target="_blank"><i>点击登录OA系统</i></a>
 									
 								</span></span></li>
 								<li>
-									益凯邮箱系统登录
-									<a href="https://qiye.aliyun.com/" target="_blank"><i>qiye.aliyun.com</i></a>
+									企业邮箱系统登录
+									<a href="https://qiye.aliyun.com/" target="_blank"><i>点击登录邮箱系统</i></a>
 									
 								</span></span></li>
 																<li>
