--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							
 					</div>
 				</div>
-				<p class="footer">© 2023-2024 王志杰 90apt.com. All Rights Reserved</p>
+				<p class="footer">© 2023-2024 IT All Rights Reserved</p>
 			</div>	
             <ul class="bg-bubbles">
                 <li></li>
