--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									
 								</span></span></li>
 																<li>
-                                <span>如果您连接的是公司WIFI，请刷新几次跳转至公司内网导航<span>
+                                <span>为保护信息安全，外网导航仅提供有限服务；如果您连接的是公司WIFI，请刷新几次跳转至公司内网导航<span>
 							</ul>
 
 							
