--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<ul>
 								<li>
 									企业OA系统登陆
-									<a href="http://ykoa.ecombine.com:8089/wui/index.html" target="_blank"><i>点击登录OA系统</i></a>
+									<a href="https://ykoa.ecombine.com:7443" target="_blank"><i>点击登录OA系统</i></a>
 									
 								</span></span></li>
 								<li>
