--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 									<a href="https://qiye.aliyun.com/" target="_blank"><i>点击登录邮箱系统</i></a>
 									
 								</span></span></li>
+								<li>
+									企业VPN系统登录
+									<a href="https://ykvpn.ecombine.com:4433/" target="_blank"><i>点击登录VPN系统</i></a>
+									
+								</span></span></li>
 																<li>
                                 <span>为保护信息安全，外网导航仅提供有限服务；如果您连接的是公司WIFI，请刷新几次跳转至公司内网导航<span>
 							</ul>
